joinGroup: fixed scrolling content on mobile. hopefully.

--- a/client/app/components/_joinGroup/joinGroup.styl
+++ b/client/app/components/_joinGroup/joinGroup.styl
@@ -4,8 +4,12 @@ button.md-button.join-group-expand
   font-size inherit
   font-weight inherit
 
+md-dialog
+    height: 80%
+
 join-group
-  overflow: hidden
+  overflow: scroll
+  height: 100%
   .description
     margin-left: 2em
     margin-right: 2em
